# ha-openai-realtime

./: .gitignore  Dockerfile  MIGRATION_TO_POETRY.md  POETRY_SETUP.md  README.md  config.yaml  pyproject.toml  repository.json
.github/workflows/: build-addon.yml
home-assistant-voice-pe/: .gitignore  ESP_PEER_EXAMPLES_NOTES.md  INSTALLATION.md  README.md  pyproject.toml  secrets.yaml.example  voice_pe_config.yaml
home-assistant-voice-pe/esphome/components/voice_assistant_webrtc/: .esphome_component.yml  CMakeLists.txt  __init__.py  pipecat_signaling.cpp  pipecat_signaling.h  voice_assistant_webrtc.cpp  voice_assistant_webrtc.h
home-assistant-voice-pe/esphome/components/voice_assistant_websocket/: README.md  TESTING.md  __init__.py  action.py  condition.py  download_websocket_client.py  voice_assistant_websocket.cpp  voice_assistant_websocket.h
openai_realtime_voice_agent/: Dockerfile  INSTALLATION.md  MIGRATION_NOTES.md  README.md  TESTING.md  config.yaml  pyproject.toml
openai_realtime_voice_agent/.devcontainer/: devcontainer.json
openai_realtime_voice_agent/app/: audio_recorder.py  audio_recording_service.py  disconnect_tool.py  home_assistant_mcp_client.py  main.py  mcp_service.py  openai_client.py  raw_audio_serializer.py  session_manager.py  webrtc_service.py  websocket_handler.py  websocket_server.py
openai_realtime_voice_agent/root/: apparmor.txt  run.sh
openai_realtime_voice_agent/test/: webrtc-simple-test.html  websocket-simple-test.html
root/: run.sh
