[tool.poetry]
name = "ha-openai-realtime"
version = "0.1.0"
description = "Home Assistant addon for OpenAI Realtime API voice control with WebSocket support"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app", from = "openai_realtime_voice_agent"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
openai = ">=1.12.0"
websockets = ">=12.0"
numpy = ">=1.26.0"
python-dotenv = ">=1.0.0"
mcp = "^1.23.1"

[tool.poetry.group.dev.dependencies]
esphome = "^2025.11.0"

[tool.poetry.scripts]
start = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

